5 переход на ESP-NOW технологию/ошибки
Компиляция скетча...
"H:\\RADIO\\MK\\Progi\\FLProg\\downloads\\PortableFLProg_8-1-0_Win64\\ideV8\\portable\\packages\\esp32\\tools\\esp-x32\\2511/bin/xtensa-esp32-elf-g++" -MMD -c "@H:\\RADIO\\MK\\Progi\\FLProg\\downloads\\PortableFLProg_8-1-0_Win64\\ideV8\\portable\\packages\\esp32\\tools\\esp32-arduino-libs\\idf-release_v5.5-9bb7aa84-v2\\esp32/flags/cpp_flags" -Wall -Os -Werror=return-type -DF_CPU=240000000L -DARDUINO=10819 -DARDUINO_ESP32_WROOM_DA -DARDUINO_ARCH_ESP32 "-DARDUINO_BOARD=\"ESP32_WROOM_DA\"" "-DARDUINO_VARIANT=\"esp32da\"" -DARDUINO_PARTITION_default "-DARDUINO_HOST_OS=\"windows\"" "-DARDUINO_FQBN=\"esp32:esp32:esp32da:PartitionScheme=default,CPUFreq=240,FlashMode=qio,FlashFreq=80,FlashSize=4M,UploadSpeed=921600,LoopCore=1,EventsCore=1,DebugLevel=none,EraseFlash=none\"" -DESP32=ESP32 -DCORE_DEBUG_LEVEL=0 -DARDUINO_RUNNING_CORE=1 -DARDUINO_EVENT_RUNNING_CORE=1 -DARDUINO_USB_CDC_ON_BOOT=0 "@H:\\RADIO\\MK\\Progi\\FLProg\\downloads\\PortableFLProg_8-1-0_Win64\\ideV8\\portable\\packages\\esp32\\tools\\esp32-arduino-libs\\idf-release_v5.5-9bb7aa84-v2\\esp32/flags/defines" "-IH:\\RADIO\\MK\\Proektis\\Proekt UmniyDom\\ПРОЕКТ UD23 УМНЫЙ ДОМ НА ESP С MQTT(Использовать 2 ядра раздельно)\\5 переход на ESP-NOW технологию\\Продолжение проекта №2\\sketch_jan18a" -iprefix "H:\\RADIO\\MK\\Progi\\FLProg\\downloads\\PortableFLProg_8-1-0_Win64\\ideV8\\portable\\packages\\esp32\\tools\\esp32-arduino-libs\\idf-release_v5.5-9bb7aa84-v2\\esp32/include/" "@H:\\RADIO\\MK\\Progi\\FLProg\\downloads\\PortableFLProg_8-1-0_Win64\\ideV8\\portable\\packages\\esp32\\tools\\esp32-arduino-libs\\idf-release_v5.5-9bb7aa84-v2\\esp32/flags/includes" "-IH:\\RADIO\\MK\\Progi\\FLProg\\downloads\\PortableFLProg_8-1-0_Win64\\ideV8\\portable\\packages\\esp32\\tools\\esp32-arduino-libs\\idf-release_v5.5-9bb7aa84-v2\\esp32/qio_qspi/include" "-IH:\\RADIO\\MK\\Progi\\FLProg\\downloads\\PortableFLProg_8-1-0_Win64\\ideV8\\portable\\packages\\esp32\\hardware\\esp32\\3.3.5\\cores\\esp32" "-IH:\\RADIO\\MK\\Progi\\FLProg\\downloads\\PortableFLProg_8-1-0_Win64\\ideV8\\portable\\packages\\esp32\\hardware\\esp32\\3.3.5\\variants\\esp32da" "-IH:\\RADIO\\MK\\Progi\\FLProg\\downloads\\PortableFLProg_8-1-0_Win64\\ideV8\\portable\\packages\\esp32\\hardware\\esp32\\3.3.5\\libraries\\WiFi\\src" "-IH:\\RADIO\\MK\\Progi\\FLProg\\downloads\\PortableFLProg_8-1-0_Win64\\ideV8\\portable\\packages\\esp32\\hardware\\esp32\\3.3.5\\libraries\\Network\\src" "-IH:\\RADIO\\MK\\Progi\\FLProg\\downloads\\PortableFLProg_8-1-0_Win64\\ideV8\\libraries\\ESPAsyncWebServer\\src" "-IH:\\RADIO\\MK\\Progi\\FLProg\\downloads\\PortableFLProg_8-1-0_Win64\\ideV8\\portable\\packages\\esp32\\hardware\\esp32\\3.3.5\\libraries\\FS\\src" "-IH:\\RADIO\\MK\\Progi\\FLProg\\downloads\\PortableFLProg_8-1-0_Win64\\ideV8\\libraries\\AsyncTCP\\src" "-IC:\\Users\\sasa\\Documents\\Arduino\\libraries\\ArduinoJson\\src" "-IH:\\RADIO\\MK\\Progi\\FLProg\\downloads\\PortableFLProg_8-1-0_Win64\\ideV8\\portable\\packages\\esp32\\hardware\\esp32\\3.3.5\\libraries\\Hash\\src" "@C:\\Users\\sasa\\AppData\\Local\\Temp\\arduino_build_723302/build_opt.h" "@C:\\Users\\sasa\\AppData\\Local\\Temp\\arduino_build_723302/file_opts" "C:\\Users\\sasa\\AppData\\Local\\Temp\\arduino_build_723302\\sketch\\sketch_jan18a.ino.cpp" -o "C:\\Users\\sasa\\AppData\\Local\\Temp\\arduino_build_723302\\sketch\\sketch_jan18a.ino.cpp.o"
H:\RADIO\MK\Proektis\Proekt UmniyDom\ПРОЕКТ UD23 УМНЫЙ ДОМ НА ESP С MQTT(Использовать 2 ядра раздельно)\5 переход на ESP-NOW технологию\Продолжение проекта №2\sketch_jan18a\sketch_jan18a.ino: In function 'void onWebSocketEvent(AsyncWebSocket*, AsyncWebSocketClient*, AwsEventType, void*, uint8_t*, size_t)':
sketch_jan18a:164:22: error: 'ArduinoJson::V6215PB2::JsonDocument::JsonDocument()' is protected within this context
In file included from C:\Users\sasa\Documents\Arduino\libraries\ArduinoJson\src/ArduinoJson/Document/BasicJsonDocument.hpp:7,
                 from C:\Users\sasa\Documents\Arduino\libraries\ArduinoJson\src/ArduinoJson/Document/DynamicJsonDocument.hpp:7,
                 from C:\Users\sasa\Documents\Arduino\libraries\ArduinoJson\src/ArduinoJson.hpp:33,
                 from C:\Users\sasa\Documents\Arduino\libraries\ArduinoJson\src/ArduinoJson.h:9,
                 from H:\RADIO\MK\Proektis\Proekt UmniyDom\ПРОЕКТ UD23 УМНЫЙ ДОМ НА ESP С MQTT(Использовать 2 ядра раздельно)\5 переход на ESP-NOW технологию\Продолжение проекта №2\sketch_jan18a\sketch_jan18a.ino:17:
C:\Users\sasa\Documents\Arduino\libraries\ArduinoJson\src/ArduinoJson/Document/JsonDocument.hpp:280:3: note: declared protected here
  280 |   JsonDocument() : pool_(0, 0) {}
      |   ^~~~~~~~~~~~
sketch_jan18a:164:22: error: 'ArduinoJson::V6215PB2::JsonDocument::~JsonDocument()' is protected within this context
C:\Users\sasa\Documents\Arduino\libraries\ArduinoJson\src/ArduinoJson/Document/JsonDocument.hpp:286:3: note: declared protected here
  286 |   ~JsonDocument() {}
      |   ^
H:\RADIO\MK\Proektis\Proekt UmniyDom\ПРОЕКТ UD23 УМНЫЙ ДОМ НА ESP С MQTT(Использовать 2 ядра раздельно)\5 переход на ESP-NOW технологию\Продолжение проекта №2\sketch_jan18a\sketch_jan18a.ino: In function 'void broadcastStatus(String)':
sketch_jan18a:222:18: error: 'ArduinoJson::V6215PB2::JsonDocument::JsonDocument()' is protected within this context
C:\Users\sasa\Documents\Arduino\libraries\ArduinoJson\src/ArduinoJson/Document/JsonDocument.hpp:280:3: note: declared protected here
  280 |   JsonDocument() : pool_(0, 0) {}
      |   ^~~~~~~~~~~~
sketch_jan18a:222:18: error: 'ArduinoJson::V6215PB2::JsonDocument::~JsonDocument()' is protected within this context
C:\Users\sasa\Documents\Arduino\libraries\ArduinoJson\src/ArduinoJson/Document/JsonDocument.hpp:286:3: note: declared protected here
  286 |   ~JsonDocument() {}
      |   ^
Несколько библиотек найдено для "WiFi.h"
 Используется: H:\RADIO\MK\Progi\FLProg\downloads\PortableFLProg_8-1-0_Win64\ideV8\portable\packages\esp32\hardware\esp32\3.3.5\libraries\WiFi
Не используется: H:\RADIO\MK\Progi\FLProg\downloads\PortableFLProg_8-1-0_Win64\ideV8\libraries\WiFi
Несколько библиотек найдено для "ESPAsyncWebServer.h"
 Используется: H:\RADIO\MK\Progi\FLProg\downloads\PortableFLProg_8-1-0_Win64\ideV8\libraries\ESPAsyncWebServer
Не используется: C:\Users\sasa\Documents\Arduino\libraries\ESP_Async_WebServer
Несколько библиотек найдено для "AsyncTCP.h"
 Используется: H:\RADIO\MK\Progi\FLProg\downloads\PortableFLProg_8-1-0_Win64\ideV8\libraries\AsyncTCP
Не используется: H:\RADIO\MK\Progi\FLProg\downloads\PortableFLProg_8-1-0_Win64\ideV8\libraries\Async_TCP
Не используется: C:\Users\sasa\Documents\Arduino\libraries\Async_TCP
Несколько библиотек найдено для "ArduinoJson.h"
 Используется: C:\Users\sasa\Documents\Arduino\libraries\ArduinoJson
Не используется: H:\RADIO\MK\Progi\FLProg\downloads\PortableFLProg_8-1-0_Win64\ideV8\libraries\ArduinoJson
Используем библиотеку WiFi версии 3.3.5 из папки: H:\RADIO\MK\Progi\FLProg\downloads\PortableFLProg_8-1-0_Win64\ideV8\portable\packages\esp32\hardware\esp32\3.3.5\libraries\WiFi 
Используем библиотеку Network версии 3.3.5 из папки: H:\RADIO\MK\Progi\FLProg\downloads\PortableFLProg_8-1-0_Win64\ideV8\portable\packages\esp32\hardware\esp32\3.3.5\libraries\Network 
Используем библиотеку ESPAsyncWebServer версии 3.6.0 из папки: H:\RADIO\MK\Progi\FLProg\downloads\PortableFLProg_8-1-0_Win64\ideV8\libraries\ESPAsyncWebServer 
Используем библиотеку FS версии 3.3.5 из папки: H:\RADIO\MK\Progi\FLProg\downloads\PortableFLProg_8-1-0_Win64\ideV8\portable\packages\esp32\hardware\esp32\3.3.5\libraries\FS 
Используем библиотеку AsyncTCP версии 3.3.2 из папки: H:\RADIO\MK\Progi\FLProg\downloads\PortableFLProg_8-1-0_Win64\ideV8\libraries\AsyncTCP 
Используем библиотеку ArduinoJson версии 6.21.5 из папки: C:\Users\sasa\Documents\Arduino\libraries\ArduinoJson 
Используем библиотеку Hash версии 3.3.5 из папки: H:\RADIO\MK\Progi\FLProg\downloads\PortableFLProg_8-1-0_Win64\ideV8\portable\packages\esp32\hardware\esp32\3.3.5\libraries\Hash 
exit status 1
'ArduinoJson::V6215PB2::JsonDocument::JsonDocument()' is protected within this context
